--- a/PMS-PropertyHapa/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
 
     function handleSubscriptionClick(price, id, name) {
         if (price === 0) {
-            window.location.href = `/Auth/Register?subscription=${encodeURIComponent(name)}`;
+            window.location.href = `/Auth/Register?subscription=${encodeURIComponent(name)}&id=${encodeURIComponent(id.toString())}`;
         } else {
             
             Swal.fire({
@@ -97,7 +97,7 @@
                 confirmButtonText: 'Ok'
             }).then((result) => {
                 if (result.isConfirmed) {
-                    window.location.href = `/Auth/Register?subscription=${encodeURIComponent(name)}`;
+                    window.location.href = `/Auth/Register?subscription=${encodeURIComponent(name)}&id=${encodeURIComponent(id.toString())}`;
                 }
             });
         }
