--- a/PMS-PropertyHapa.Staff/Views/Auth/Login.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Auth/Login.cshtml
@@ -23,6 +23,15 @@
 
 
     <script>
+        function setCookie(name, value, days) {
+            var expires = "";
+            if (days) {
+                var date = new Date(); // Correct: 'Date' is capitalized
+                date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                expires = "; expires=" + date.toUTCString();
+            }
+            document.cookie = name + "=" + (value || "") + expires + "; path=/";
+        }
         $(function () {
             var $emailField = $('#Email');
 
@@ -39,6 +48,7 @@
                     success: function (response) {
                         if (response.success) {
                             localStorage.setItem('userId', response.result.userId);
+                            setCookie("userId", response.result.userId, 7);
                             localStorage.setItem('userName', response.result.userName);
                             if (response.result.organizationName) {
                                 localStorage.setItem('organizationName', response.result.organizationName);
