--- a/PMS-PropertyHapa/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
                         <div class="price-box">
                             <div>
                                 <h4 class="text-white">$${subscription.Price.toFixed(2)} ${subscription.Currency}</h4>
-                                <p>/ month</p>
+                                        <p>/ ${subscription.SubscriptionType}</p>
                             </div>
                         </div>
                     </div>
