--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -400,7 +400,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" onclick="closeModal()" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-success" onclick="saveTenantOrganizationInfo()">Save Changes</button>
+                    <button type="button" class="btn btn-success" id="saveChangesButton">Save Changes</button>
                 </div>
             </div>
         </div>
@@ -526,6 +526,23 @@
                     console.error('Error fetching data:', error);
                 }
             });
+        }
+
+
+
+        $(document).ready(function () {
+
+            var Toast = Swal.mixin({
+                toast: true,
+                position: 'top-end',
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                    toast.addEventListener('mouseenter', Swal.stopTimer)
+                    toast.addEventListener('mouseleave', Swal.resumeTimer)
+                }
+            });
 
             function convertFileToBase64(file) {
                 return new Promise((resolve, reject) => {
@@ -580,7 +597,14 @@
                 $('.primary-color-dependent').css('background-color', color);
             }
 
+            function changeSecondaryColor(color) {
+                document.documentElement.style.setProperty('--secondary-color', color);
+                $('.secondary-color-dependent').css('background-color', color);
+            }
 
+            $('#saveChangesButton').click(function () {
+                saveTenantOrganizationInfo();
+            });
 
             $("#organizationLogoUploader").change(function () {
                 readURL(this, '#organizationLogoPreview');
@@ -633,7 +657,7 @@
                                 willClose: () => {
                                     $('#exampleModalCenter').modal('hide');
                                     setTimeout(function () {
-                                     
+
                                         if (values[0]) {
                                             localStorage.setItem('organizationLogo', values[0]);
                                             $('#NewPictureBase64').attr('src', values[0]);
@@ -641,7 +665,7 @@
                                         if (values[1]) {
                                             localStorage.setItem('organizationIcon', values[1]);
                                             $('#faviconIcon').attr('href', values[1]);
-                                            document.getElementById('faviconIcon').href = values[1]; 
+                                            document.getElementById('faviconIcon').href = values[1];
                                         }
                                         window.location.reload();
                                     }, 500);
